--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ function showSkill() -->
         { id: 'blog-dvwa-notes', title: 'DVWA & bWAPP Notes – What Clicked', date: '2025-09-14', tags: ['Practice','DVWA','bWAPP'], excerpt: 'Boolean-based tricks, time delays, and why error messages are gold (when they exist).', content: 'On low level challenges I focus on patterns first, then generalize payloads for medium/high…' },
       ]),
       files: load('bs-files', [
-        { id: 'fHacking: The Art of Exploitation, 2nd Edition', name: 'Hacking: The Art of Exploitation, 2nd Edition', kind: 'pdf', url: '/Hacking: The Art of Exploitation, 2nd Edition', note: 'A must read book for learn hacking' },
+        { id: 'Hacking: The Art of Exploitation, 2nd Edition', name: 'Hacking: The Art of Exploitation, 2nd Edition', kind: 'pdf', url: '/Hacking: The Art of Exploitation, 2nd Edition', note: 'A must read book for learn hacking' },
         { id: 'file-sample-pdf', name: 'sample-handout.pdf', kind: 'pdf', url: '/files/sample-handout.pdf', note: 'Replace with your actual PDF' },
       ]),
       bio: load('bs-bio', {
