Update file URLs and personal links in index.html

--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@ function showSkill() -->
         { id: 'blog-dvwa-notes', title: 'DVWA & bWAPP Notes – What Clicked', date: '2025-09-14', tags: ['Practice','DVWA','bWAPP'], excerpt: 'Boolean-based tricks, time delays, and why error messages are gold (when they exist).', content: 'On low level challenges I focus on patterns first, then generalize payloads for medium/high…' },
       ]),
       files: load('bs-files', [
-        { id: 'Hacking: The Art of Exploitation, 2nd Edition', name: 'Hacking: The Art of Exploitation, 2nd Edition', kind: 'pdf', url: '/Hacking: The Art of Exploitation, 2nd Edition', note: 'A must read book for learn hacking' },
-        { id: 'file-sample-pdf', name: 'sample-handout.pdf', kind: 'pdf', url: '/files/sample-handout.pdf', note: 'Replace with your actual PDF' },
+        { id: 'Hacking: The Art of Exploitation, 2nd Edition', name: 'Hacking: The Art of Exploitation, 2nd Edition', kind: 'pdf', url: '/Hacking: The Art of Exploitation, 2nd Edition by jon Erickson.pdf', note: 'A must read book for learn hacking' },
+        { id: 'file-sample-pdf', name: 'Hacking: The Art of Exploitation, 2nd Edition', kind: 'pdf', url: '/files/Hacking: The Art of Exploitation, 2nd Edition by jon Erickson.pdf', note: 'Replace with your actual PDF' },
       ]),
       bio: load('bs-bio', {
         name: 'Balkar Singh',
@@ -359,9 +359,9 @@ function showSkill() -->
         email: 'balkar913n@gmail.com',
         about: '3rd year B.Voc in Cyber Security. Practicing labs (DVWA, bWAPP, SQLi Audit), writing practical files, and sharing learnings.',
         links: [
-          { label: 'GitHub', href: 'https://github.com/your-handle' },
-          { label: 'LinkedIn', href: 'https://linkedin.com/in/your-handle' },
-          { label: 'Blog', href: '#blog' },
+          { label: 'GitHub', href: 'https://github.com/Balkar13' },
+          { label: 'LinkedIn', href: 'https://linkedin.com/in/balkar-singh-4346932a3/' },
+          { label: 'Blog', href: 'wwww.balkarsidhu.xyz' },
         ]
       })
     };
