Clear file entries from the load function in index.html
Removed specific file entries from the load function.

--- a/index.html
+++ b/index.html
@@ -348,10 +348,7 @@ function showSkill() -->
         { id: 'blog-roadmap-bugbounty', title: 'My Bug Bounty Roadmap (Student Edition)', date: '2025-10-31', tags: ['Bug Bounty','Learning'], excerpt: 'How I plan my evenings, pick targets, and keep notes tidy while studying…', content: 'I split time between labs and recon. Weekly goals keep me honest. Here’s the checklist I actually use…' },
         { id: 'blog-dvwa-notes', title: 'DVWA & bWAPP Notes – What Clicked', date: '2025-09-14', tags: ['Practice','DVWA','bWAPP'], excerpt: 'Boolean-based tricks, time delays, and why error messages are gold (when they exist).', content: 'On low level challenges I focus on patterns first, then generalize payloads for medium/high…' },
       ]),
-      files: load('bs-files', [
-        { id: 'abc', name: 'abc', url: '/files/black-hat-python.pdf', note: 'A must read book for learn hacking' },
-        { id: 'cde', name: 'Hacking: The Art of Exploitation, 2nd Edition', kind: 'pdf', url: '/files/hacking-the-art.pdf', note: 'Replace with your actual PDF' },
-      ]),
+      files: load('bs-files', [ ]),
       bio: load('bs-bio', {
         name: 'Balkar Singh',
         headline: 'Cybersecurity Student • Bug Bounty Learner',
