--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ function showSkill() -->
           <div class="flex items-center gap-2 flex-shrink-0">
             <a href="${f.url}" target="_blank" rel="noreferrer" class="px-3 py-1.5 rounded-full border border-zinc-300 dark:border-zinc-700 text-sm hover:bg-zinc-100 dark:hover:bg-zinc-800">Open</a>
             <a href="${f.url}" download class="px-3 py-1.5 rounded-full bg-zinc-900 text-white dark:bg-white dark:text-zinc-900 text-sm hover:opacity-90">Download</a>
-            <button data-del-file="${f.id}" class="px-3 py-1.5 rounded-full text-sm border border-red-200 dark:border-red-900/40 text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">Delete</button>
+            // <button data-del-file="${f.id}" class="px-3 py-1.5 rounded-full text-sm border border-red-200 dark:border-red-900/40 text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">Delete</button>
           </div>`;
         list.appendChild(row);
       });
