--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ function showSkill() -->
           <div class="mt-5 flex gap-2">
             <a href="${p.url}" target="_blank" rel="noreferrer" class="px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800">View PDF</a>
             <a href="${p.url}" download class="px-4 py-2 rounded-full bg-zinc-900 text-white dark:bg-white dark:text-zinc-900 hover:opacity-90">Download</a>
-            // <button hidden data-del="${p.id}" class="ml-auto px-4 py-2 rounded-full border border-red-200 dark:border-red-900/40 text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">Delete</button>
+            //<button data-del="${p.id}" class="ml-auto px-4 py-2 rounded-full border border-red-200 dark:border-red-900/40 text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">Delete</button>
           </div>`;
         grid.appendChild(card);
       });
