--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ function showSkill() -->
 
     <!-- Add Project Form -->
     <div class="mb-6">
-      <button id="add-proj-open" class="px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 text-sm">+ Add Project</button>
+      <!--<button id="add-proj-open" class="px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 text-sm">+ Add Project</button>-->
       <div id="add-proj-form" class="hidden rounded-2xl border border-zinc-200 dark:border-zinc-800 p-4 bg-white/60 dark:bg-zinc-900/60 mt-3">
         <div class="grid md:grid-cols-2 gap-3">
           <input id="proj-title" placeholder="Title" class="px-3 py-2 rounded-lg border border-zinc-300 dark:border-zinc-700 bg-white dark:bg-zinc-900" />
@@ -238,7 +238,7 @@ function showSkill() -->
         <div class="flex-1 min-w-0">
           <div id="bio-name" class="text-2xl font-semibold leading-tight">Balkar Singh</div>
           <div id="bio-headline" class="text-zinc-600 dark:text-zinc-300">Cybersecurity Student • Bug Bounty Learner</div>
-          <div id="bio-about" class="mt-3 text-zinc-700 dark:text-zinc-200">B.Voc in Cyber Security, Practicing labs (DVWA, bWAPP, web Goat, Portswigger, SQLi Audi-1), Exploring Try hack me Labs, and sharing learnings.</div>
+          <div id="bio-about" class="mt-3 text-zinc-700 dark:text-zinc-200">Cyber Security student passionate about continuous learning and real-world implementation of security concepts.</div>
           <div class="mt-3 text-sm text-zinc-500"><span id="bio-location">Khiwa Kalan, Mansa, Punjab (India)</span> · <a id="bio-email" class="underline hover:no-underline" href="mailto:balkar913n@gmail.com">balkar913n@gmail.com</a></div>
           <div id="bio-links" class="mt-3 flex flex-wrap gap-3"></div>
         </div>
@@ -306,7 +306,7 @@ function showSkill() -->
     </div>
 
     <div class="mb-6">
-      <button id="add-file-open" class="px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 text-sm">+ Add File</button>
+      <!--<button id="add-file-open" class="px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 text-sm">+ Add File</button>-->
       <div id="add-file-form" class="hidden rounded-2xl border border-zinc-200 dark:border-zinc-800 p-4 bg-white/60 dark:bg-zinc-900/60 mt-3">
         <div class="grid md:grid-cols-4 gap-3">
           <input id="file-name" placeholder="Filename (with extension)" class="px-3 py-2 rounded-lg border border-zinc-300 dark:border-zinc-700 bg-white dark:bg-zinc-900" />
