--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ function showSkill() -->
   <section id="projects" class="mx-auto max-w-6xl px-4 py-14 scroll-mt-24">
     <div class="mb-6">
       <h2 class="text-3xl md:text-4xl font-bold tracking-tight">Projects (PDF)</h2>
-      <p class="text-zinc-600 dark:text-zinc-400 mt-2">Add each project one by one. View online or download the file.</p>
+      <p class="text-zinc-600 dark:text-zinc-400 mt-2">These are the cybersecurity projects I’ve built independently using my skills, research, and practical learning.. </p>
     </div>
 
     <!-- Add Project Form -->
@@ -243,7 +243,7 @@ function showSkill() -->
           <div id="bio-links" class="mt-3 flex flex-wrap gap-3"></div>
         </div>
         <div class="flex flex-col gap-2">
-          <button id="bio-edit" class="px-3 py-1.5 rounded-full border border-zinc-300 dark:border-zinc-700 text-sm">Edit</button>
+          <!--<button id="bio-edit" class="px-3 py-1.5 rounded-full border border-zinc-300 dark:border-zinc-700 text-sm">Edit</button>-->
         </div>
       </div>
 
