--- a/index.html
+++ b/index.html
@@ -284,21 +284,21 @@ function showSkill() -->
   </a>
 
   <!-- LinkedIn -->
-  <a href="https://linkedin.com" target="_blank" class="p-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800">
+  <a href="https://linkedin.com/in/balkar-singh-4346932a3/" target="_blank" class="p-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800">
     <svg class="w-6 h-6 text-blue-600 dark:text-blue-400" fill="currentColor" viewBox="0 0 24 24">
       <path d="M4.98 3.5A2.5 2.5 0 112.5 6a2.5 2.5 0 012.48-2.5zM3 8h4v12H3zM9 8h3.8v1.8h.1A4.2 4.2 0 0120 13.7V20h-4v-5.1c0-1.2 0-2.7-1.7-2.7-1.7 0-2 1.3-2 2.6V20H8.9z"/>
     </svg>
   </a>
 
   <!-- TryHackMe -->
-  <a href="https://tryhackme.com/p/YOUR_USERNAME" target="_blank" class="p-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800">
+  <a href="https://tryhackme.com/p/BalkarSidhu" target="_blank" class="p-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800">
     <svg class="w-6 h-6 text-red-600 dark:text-red-400" fill="currentColor" viewBox="0 0 640 512">
       <path d="M480 0c-88.4 0-160 71.6-160 160v64H192v64h128v64h64v-64h128v-64H384v-64c0-53 43-96 96-96s96 43 96 96h64c0-88.4-71.6-160-160-160z"/>
     </svg>
   </a>
 
   <!-- Instagram -->
-  <a href="https://instagram.com/YOUR_USERNAME" target="_blank" class="p-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800">
+  <a href="https://instagram.com/balkar_sidhu_official" target="_blank" class="p-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800">
     <svg class="w-6 h-6 text-pink-600 dark:text-pink-400" fill="currentColor" viewBox="0 0 24 24">
       <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2 0 1.9.3 2.4.6a4 4 0 011.4 1.4c.3.5.5 1.2.6 2.4.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.2-.3 1.9-.6 2.4a4 4 0 01-1.4 1.4c-.5.3-1.2.5-2.4.6-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2-.1-1.9-.3-2.4-.6a4 4 0 01-1.4-1.4c-.3-.5-.5-1.2-.6-2.4C2.2 15.6 2.2 15.2 2.2 12s0-3.6.1-4.9c.1-1.2.3-1.9.6-2.4a4 4 0 011.4-1.4c.5-.3 1.2-.5 2.4-.6C8.4 2.2 8.8 2.2 12 2.2m0-2.2C8.7 0 8.3 0 7 .1 5.6.2 4.6.4 3.8.8a6.2 6.2 0 00-2.3 2.3C1.1 3.8.9 4.8.8 6.2.7 7.5.7 7.9.7 12s0 4.5.1 5.8c.1 1.4.3 2.4.8 3.2a6.2 6.2 0 002.3 2.3c.8.4 1.8.7 3.2.8 1.3.1 1.7.1 5.8.1s4.5 0 5.8-.1c1.4-.1 2.4-.3 3.2-.8a6.2 6.2 0 002.3-2.3c.4-.8.7-1.8.8-3.2.1-1.3.1-1.7.1-5.8s0-4.5-.1-5.8c-.1-1.4-.3-2.4-.8-3.2a6.2 6.2 0 00-2.3-2.3c-.8-.4-1.8-.7-3.2-.8C16.5 0 16.1 0 12 0z"/>
       <circle cx="12" cy="12" r="3.2"/>
