--- a/index.html
+++ b/index.html
@@ -274,39 +274,49 @@ function showSkill() -->
   </section>
 
 <!-- Social Media Bar -->
-<div class="mt-8 flex flex-wrap items-center gap-4 justify-start">
-  
+<!-- Social Media Bar -->
+<div class="mt-10 flex flex-wrap items-center justify-center gap-6">
+
   <!-- GitHub -->
-  <a href="https://github.com/Balkar13" target="_blank" class="p-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800">
+  <a href="https://github.com/Balkar13" target="_blank"
+     class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 transition">
     <svg class="w-6 h-6 text-zinc-800 dark:text-zinc-200" fill="currentColor" viewBox="0 0 24 24">
       <path d="M12 .5C5.65.5.5 5.65.5 12a11.5 11.5 0 008 10.95c.6.1.82-.25.82-.57v-2c-3.26.7-3.95-1.57-3.95-1.57a3.1 3.1 0 00-1.3-1.7c-1.07-.72.1-.7.1-.7a2.4 2.4 0 011.75 1.2 2.5 2.5 0 003.4 1 2.5 2.5 0 01.75-1.57c-2.6-.3-5.33-1.3-5.33-5.8a4.6 4.6 0 011.2-3.2 4.2 4.2 0 01.1-3.15s1-.32 3.3 1.2a11.3 11.3 0 016 0c2.3-1.52 3.3-1.2 3.3-1.2a4.2 4.2 0 01.1 3.15 4.6 4.6 0 011.2 3.2c0 4.53-2.75 5.5-5.37 5.8A2.8 2.8 0 0114 19.6v3.3c0 .3.22.7.82.57A11.5 11.5 0 0023.5 12C23.5 5.65 18.35.5 12 .5z"/>
     </svg>
+    <span class="text-zinc-700 dark:text-zinc-300 font-medium">GitHub</span>
   </a>
 
   <!-- LinkedIn -->
-  <a href="https://linkedin.com/in/balkar-singh-4346932a3/" target="_blank" class="p-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800">
+  <a href="https://linkedin.com/in/YOUR_ID" target="_blank"
+     class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 transition">
     <svg class="w-6 h-6 text-blue-600 dark:text-blue-400" fill="currentColor" viewBox="0 0 24 24">
       <path d="M4.98 3.5A2.5 2.5 0 112.5 6a2.5 2.5 0 012.48-2.5zM3 8h4v12H3zM9 8h3.8v1.8h.1A4.2 4.2 0 0120 13.7V20h-4v-5.1c0-1.2 0-2.7-1.7-2.7-1.7 0-2 1.3-2 2.6V20H8.9z"/>
     </svg>
+    <span class="text-zinc-700 dark:text-zinc-300 font-medium">LinkedIn</span>
   </a>
 
   <!-- TryHackMe -->
-  <a href="https://tryhackme.com/p/BalkarSidhu" target="_blank" class="p-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800">
-    <svg class="w-6 h-6 text-red-600 dark:text-red-400" fill="currentColor" viewBox="0 0 640 512">
-      <path d="M480 0c-88.4 0-160 71.6-160 160v64H192v64h128v64h64v-64h128v-64H384v-64c0-53 43-96 96-96s96 43 96 96h64c0-88.4-71.6-160-160-160z"/>
+  <a href="https://tryhackme.com/p/YOUR_USERNAME" target="_blank"
+     class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 transition">
+    <svg class="w-7 h-7 text-red-600 dark:text-red-400" viewBox="0 0 640 512" fill="currentColor">
+      <path d="M504 144c0-79.5-64.5-144-144-144S216 64.5 216 144v72h-40c-17.7 0-32 14.3-32 32v64c0 17.7 14.3 32 32 32h40v72c0 79.5 64.5 144 144 144s144-64.5 144-144V344h40c17.7 0 32-14.3 32-32v-64c0-17.7-14.3-32-32-32h-40V144zm-72 280c0 39.7-32.3 72-72 72s-72-32.3-72-72v-72h144v72zM288 216V144c0-39.7 32.3-72 72-72s72 32.3 72 72v72H288z"/>
     </svg>
+    <span class="text-zinc-700 dark:text-zinc-300 font-medium">TryHackMe</span>
   </a>
 
   <!-- Instagram -->
-  <a href="https://instagram.com/balkar_sidhu_official" target="_blank" class="p-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800">
-    <svg class="w-6 h-6 text-pink-600 dark:text-pink-400" fill="currentColor" viewBox="0 0 24 24">
-      <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2 0 1.9.3 2.4.6a4 4 0 011.4 1.4c.3.5.5 1.2.6 2.4.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.2-.3 1.9-.6 2.4a4 4 0 01-1.4 1.4c-.5.3-1.2.5-2.4.6-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2-.1-1.9-.3-2.4-.6a4 4 0 01-1.4-1.4c-.3-.5-.5-1.2-.6-2.4C2.2 15.6 2.2 15.2 2.2 12s0-3.6.1-4.9c.1-1.2.3-1.9.6-2.4a4 4 0 011.4-1.4c.5-.3 1.2-.5 2.4-.6C8.4 2.2 8.8 2.2 12 2.2m0-2.2C8.7 0 8.3 0 7 .1 5.6.2 4.6.4 3.8.8a6.2 6.2 0 00-2.3 2.3C1.1 3.8.9 4.8.8 6.2.7 7.5.7 7.9.7 12s0 4.5.1 5.8c.1 1.4.3 2.4.8 3.2a6.2 6.2 0 002.3 2.3c.8.4 1.8.7 3.2.8 1.3.1 1.7.1 5.8.1s4.5 0 5.8-.1c1.4-.1 2.4-.3 3.2-.8a6.2 6.2 0 002.3-2.3c.4-.8.7-1.8.8-3.2.1-1.3.1-1.7.1-5.8s0-4.5-.1-5.8c-.1-1.4-.3-2.4-.8-3.2a6.2 6.2 0 00-2.3-2.3c-.8-.4-1.8-.7-3.2-.8C16.5 0 16.1 0 12 0z"/>
+  <a href="https://instagram.com/YOUR_ID" target="_blank"
+     class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 transition">
+    <svg class="w-6 h-6 text-pink-600 dark:text-pink-400" viewBox="0 0 24 24" fill="currentColor">
+      <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2 0 1.9.3 2.4.6a4 4 0 011.4 1.4c.3.5.5 1.2.6 2.4.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.2-.3 1.9-.6 2.4a4 4 0 01-1.4 1.4c-.5.3-1.2.5-2.4.6-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2-.1-1.9-.3-2.4-.6a4 4 0 01-1.4-1.4c-.3-.5-.5-1.2-.6-2.4C2.2 15.6 2.2 15.2 2.2 12s0-3.6.1-4.9c.1-1.2.3-1.9.6-2.4a4 4 0 011.4-1.4c.5-.3 1.2-.5 2.4-.6C8.4 2.2 8.8 2.2 12 2.2z"/>
       <circle cx="12" cy="12" r="3.2"/>
       <circle cx="17.4" cy="6.6" r="1.4"/>
     </svg>
+    <span class="text-zinc-700 dark:text-zinc-300 font-medium">Instagram</span>
   </a>
 
 </div>
+
 
   
   <!-- Blog -->
