--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ function showSkill() -->
   </a>
 
   <!-- LinkedIn -->
-  <a href="https://linkedin.com/in/YOUR_ID" target="_blank"
+  <a href="https://linkedin.com/in/balkar-singh-4346932a3/" target="_blank"
      class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 transition">
     <svg class="w-6 h-6 text-blue-600 dark:text-blue-400" fill="currentColor" viewBox="0 0 24 24">
       <path d="M4.98 3.5A2.5 2.5 0 112.5 6a2.5 2.5 0 012.48-2.5zM3 8h4v12H3zM9 8h3.8v1.8h.1A4.2 4.2 0 0120 13.7V20h-4v-5.1c0-1.2 0-2.7-1.7-2.7-1.7 0-2 1.3-2 2.6V20H8.9z"/>
@@ -296,26 +296,32 @@ function showSkill() -->
   </a>
 
   <!-- TryHackMe -->
-  <a href="https://tryhackme.com/p/YOUR_USERNAME" target="_blank"
-     class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 transition">
-    <svg class="w-7 h-7 text-red-600 dark:text-red-400" viewBox="0 0 640 512" fill="currentColor">
-      <path d="M504 144c0-79.5-64.5-144-144-144S216 64.5 216 144v72h-40c-17.7 0-32 14.3-32 32v64c0 17.7 14.3 32 32 32h40v72c0 79.5 64.5 144 144 144s144-64.5 144-144V344h40c17.7 0 32-14.3 32-32v-64c0-17.7-14.3-32-32-32h-40V144zm-72 280c0 39.7-32.3 72-72 72s-72-32.3-72-72v-72h144v72zM288 216V144c0-39.7 32.3-72 72-72s72 32.3 72 72v72H288z"/>
-    </svg>
-    <span class="text-zinc-700 dark:text-zinc-300 font-medium">TryHackMe</span>
-  </a>
+  <!-- TryHackMe -->
+<a href="https://tryhackme.com/p/BalkarSidhu" target="_blank"
+   class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 transition">
+
+  <!-- Correct TryHackMe Logo -->
+  <svg class="w-7 h-7 text-red-600 dark:text-red-400" viewBox="0 0 640 512" fill="currentColor">
+    <path d="M320 0a176 176 0 00-176 176v48h-24a24 24 0 00-24 24v64a24 24 0 0024 24h24v48a176 176 0 00352 0v-48h24a24 24 0 0024-24v-64a24 24 0 00-24-24h-24v-48A176 176 0 00320 0zm0 48a128 128 0 01128 128v48H192v-48A128 128 0 01320 48zm0 416a128 128 0 01-128-128v-48h256v48a128 128 0 01-128 128z"/>
+  </svg>
+
+  <span class="text-zinc-700 dark:text-zinc-300 font-medium">TryHackMe</span>
+</a>
+
 
   <!-- Instagram -->
-  <a href="https://instagram.com/YOUR_ID" target="_blank"
-     class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 transition">
-    <svg class="w-6 h-6 text-pink-600 dark:text-pink-400" viewBox="0 0 24 24" fill="currentColor">
-      <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2 0 1.9.3 2.4.6a4 4 0 011.4 1.4c.3.5.5 1.2.6 2.4.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.2-.3 1.9-.6 2.4a4 4 0 01-1.4 1.4c-.5.3-1.2.5-2.4.6-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2-.1-1.9-.3-2.4-.6a4 4 0 01-1.4-1.4c-.3-.5-.5-1.2-.6-2.4C2.2 15.6 2.2 15.2 2.2 12s0-3.6.1-4.9c.1-1.2.3-1.9.6-2.4a4 4 0 011.4-1.4c.5-.3 1.2-.5 2.4-.6C8.4 2.2 8.8 2.2 12 2.2z"/>
-      <circle cx="12" cy="12" r="3.2"/>
-      <circle cx="17.4" cy="6.6" r="1.4"/>
-    </svg>
-    <span class="text-zinc-700 dark:text-zinc-300 font-medium">Instagram</span>
-  </a>
+ <!-- Instagram -->
+<a href="https://instagram.com/balkar_sidhu_official" target="_blank"
+   class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-800 transition">
 
-</div>
+  <!-- Clean Instagram Logo -->
+  <svg class="w-6 h-6 text-pink-600 dark:text-pink-400" viewBox="0 0 448 512" fill="currentColor">
+    <path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.2 0-74.7-33.4-74.7-74.7s33.4-74.7 74.7-74.7 74.7 33.4 74.7 74.7-33.5 74.7-74.7 74.7zm146.4-194.3a26.6 26.6 0 11-26.6-26.6 26.6 26.6 0 0126.6 26.6zm76.1 27.2c-.5-35.2-9.7-66.7-35.4-92.4s-57.3-34.8-92.4-35.4c-36.4-2.1-145.6-2.1-182 0-35.2.5-66.7 9.7-92.4 35.4S9.9 128.3 9.4 163.5c-2.1 36.4-2.1 145.6 0 182 1.7 35.2 9.7 66.7 35.4 92.4s57.3 34.8 92.4 35.4c36.4 2.1 145.6 2.1 182 0 35.2-.5 66.7-9.7 92.4-35.4s34.8-57.3 35.4-92.4c2.1-36.4 2.1-145.6 0-182zM398.8 388a83.5 83.5 0 01-47.1 47.1c-32.6 12.9-110 9.9-147.6 9.9s-115 .3-147.6-9.9A83.5 83.5 0 018.4 340.9c-12.9-32.6-9.9-110-9.9-147.6s-.3-115 9.9-147.6A83.5 83.5 0 0155.5-1.5c32.6-12.9 110-9.9 147.6-9.9s115-.3 147.6 9.9A83.5 83.5 0 01439.6 55.5c12.9 32.6 9.9 110 9.9 147.6s.3 115-9.9 147.6z"/>
+  </svg>
+
+  <span class="text-zinc-700 dark:text-zinc-300 font-medium">Instagram</span>
+</a>
+
 
 
   
