--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ function showSkill() -->
   </section>
 
 <!-- Social Media Bar -->
-<!-- Social Media Bar -->
+<!-- Social Media Bar 
 <div class="mt-10 flex flex-wrap items-center justify-center gap-6">
 
   <!-- GitHub -->
@@ -322,7 +322,7 @@ function showSkill() -->
   <span class="text-zinc-700 dark:text-zinc-300 font-medium">Instagram</span>
 </a>
 
-
+-->
 
   
   <!-- Blog -->
