--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Balkar Singh · Portfolio</title>
+  <style>
+    footer {
+  padding-top: 3rem;
+}
+
+@media (max-width: 640px) {
+  footer { padding-top: 2rem; }
+}
+    </style>
   <!-- TailwindCSS CDN (pure CSS) -->
   <link rel="icon" href="/path/to/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -363,15 +372,7 @@ function showSkill() -->
   </div>
 </div>
 
-/* ensure footer keeps space from the element above */
-footer {
-  padding-top: 3rem; /* increases space above footer content */
-}
 
-/* tiny responsive tweak: smaller padding on very small screens */
-@media (max-width: 640px) {
-  footer { padding-top: 2rem; }
-}
 
   
   <footer class="mt-20 py-10 border-t border-zinc-200 dark:border-zinc-800 text-sm text-center text-zinc-500">
