--- a/index.html
+++ b/index.html
@@ -338,41 +338,51 @@ function showSkill() -->
   </section>
 
 <!-- Social Media Bar -->
-<!-- Social Media Bar (centered, responsive, spaced from footer) -->
-<div class="mx-auto max-w-6xl px-4 mt-12 mb-16">
-  <div class="flex flex-wrap items-center justify-center gap-4">
+<div class="mx-auto max-w-6xl px-4 mt-12 mb-20">
+  <div class="flex flex-wrap items-center justify-center gap-6">
+
     <!-- GitHub -->
     <a href="https://github.com/Balkar13" target="_blank"
-       class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-700/40 hover:bg-zinc-900/40 transition">
-      <!-- svg -->
-      <svg class="w-5 h-5 text-zinc-200" viewBox="0 0 24 24" fill="currentColor">...</svg>
-      <span class="text-zinc-200">GitHub</span>
+      class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-600/40 hover:bg-zinc-800/40 transition">
+      <svg class="w-5 h-5 text-white" viewBox="0 0 24 24" fill="currentColor">
+        <path
+          d="M12 .5C5.65.5.5 5.65.5 12a11.5 11.5 0 0 0 7.85 10.95c.57.1.78-.25.78-.55v-2.1c-3.19.7-3.86-1.54-3.86-1.54a3.03 3.03 0 0 0-1.28-1.68c-1.04-.72.08-.7.08-.7a2.4 2.4 0 0 1 1.76 1.18 2.43 2.43 0 0 0 3.32.95 2.43 2.43 0 0 1 .73-1.52c-2.55-.29-5.23-1.28-5.23-5.67a4.45 4.45 0 0 1 1.18-3.08 4.1 4.1 0 0 1 .11-3.04s.96-.31 3.15 1.18a10.74 10.74 0 0 1 5.74 0c2.2-1.49 3.15-1.18 3.15-1.18a4.1 4.1 0 0 1 .11 3.04 4.45 4.45 0 0 1 1.18 3.08c0 4.4-2.69 5.38-5.25 5.66a2.72 2.72 0 0 1 .78 2.1v3.14c0 .31.21.66.79.55A11.5 11.5 0 0 0 23.5 12C23.5 5.65 18.35.5 12 .5Z" />
+      </svg>
+      <span>GitHub</span>
     </a>
 
     <!-- LinkedIn -->
-    <a href="https://linkedin.com/in/YOUR_ID" target="_blank"
-       class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-700/40 hover:bg-zinc-900/40 transition">
-      <svg class="w-5 h-5 text-blue-400" viewBox="0 0 24 24" fill="currentColor">...</svg>
-      <span class="text-zinc-200">LinkedIn</span>
+    <a href="https://linkedin.com/in/balkar-singh-4346932a3/" target="_blank"
+      class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-600/40 hover:bg-zinc-800/40 transition">
+      <svg class="w-5 h-5 text-blue-400" viewBox="0 0 24 24" fill="currentColor">
+        <path
+          d="M4.98 3.5C4.98 4.88 3.88 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V24h-4V8zm7.5 0h3.8v2.16h.05c.53-1 1.83-2.16 3.77-2.16 4.03 0 4.78 2.65 4.78 6.1V24h-4v-8.28c0-1.97-.04-4.5-2.75-4.5-2.76 0-3.18 2.16-3.18 4.37V24h-4V8z" />
+      </svg>
+      <span>LinkedIn</span>
     </a>
 
-    <!-- TryHackMe -->
-    <a href="https://tryhackme.com/p/YOUR_USERNAME" target="_blank"
-       class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-700/40 hover:bg-zinc-900/40 transition">
-      <svg class="w-6 h-6 text-red-400" viewBox="0 0 640 512" fill="currentColor">...</svg>
-      <span class="text-zinc-200">TryHackMe</span>
+    <!-- TryHackMe (Cloud Logo) -->
+    <a href="https://tryhackme.com/p/BalkarSidhu" target="_blank"
+      class="flex items-center gap-2 px-4 py-2 rounded-full border border-red-500/40 hover:bg-red-500/10 transition">
+      <svg class="w-6 h-6 text-red-500" viewBox="0 0 640 512" fill="currentColor">
+        <path
+          d="M472 192h-8.7C441.1 129.9 383.3 88 320 88c-63.3 0-121.1 41.9-143.3 104H168c-92.6 0-168 75.4-168 168s75.4 168 168 168h304c92.6 0 168-75.4 168-168s-75.4-168-168-168zm-88 224h-16v16c0 26.5-21.5 48-48 48h-16c-26.5 0-48-21.5-48-48v-16h-16c-26.5 0-48-21.5-48-48v-16c0-26.5 21.5-48 48-48h16v-16c0-26.5 21.5-48 48-48h16c26.5 0 48 21.5 48 48v16h16c26.5 0 48 21.5 48 48v16c0 26.5-21.5 48-48 48z" />
+      </svg>
+      <span>TryHackMe</span>
     </a>
 
     <!-- Instagram -->
-    <a href="https://instagram.com/YOUR_ID" target="_blank"
-       class="flex items-center gap-2 px-4 py-2 rounded-full border border-zinc-700/40 hover:bg-zinc-900/40 transition">
-      <svg class="w-5 h-5 text-pink-400" viewBox="0 0 448 512" fill="currentColor">...</svg>
-      <span class="text-zinc-200">Instagram</span>
+    <a href="https://instagram.com/balkar_sidhu_official" target="_blank"
+      class="flex items-center gap-2 px-4 py-2 rounded-full border border-pink-400/40 hover:bg-pink-400/10 transition">
+      <svg class="w-5 h-5 text-pink-400" viewBox="0 0 448 512" fill="currentColor">
+        <path
+          d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9S160.5 370.9 224.1 370.9 339 319.6 339 255.9 287.7 141 224.1 141zm0 189c-41 0-74.1-33.1-74.1-74.1s33.1-74.1 74.1-74.1 74.1 33.1 74.1 74.1-33.1 74.1-74.1 74.1zm146.4-194.3c0 14.9-12 26.9-26.9 26.9s-26.9-12-26.9-26.9 12-26.9 26.9-26.9 26.9 12 26.9 26.9zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2C277.6 32 170.4 32 90.5 36.7 54.6 38.4 22.8 46.6-3.4 72.8c-26.2 26.2-34.4 58-36.2 93.9C-44 179.4-44 286.6-39.3 366.5c1.7 35.9 9.9 67.7 36.2 93.9 26.2 26.2 58 34.4 93.9 36.2C170.4 480 277.6 480 357.5 475.3c35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 4.7-79.9 4.7-187.1-.2-266.8z" />
+      </svg>
+      <span>Instagram</span>
     </a>
+
   </div>
 </div>
-
-
 
   
   <footer class="mt-20 py-10 border-t border-zinc-200 dark:border-zinc-800 text-sm text-center text-zinc-500">
