Simplify introduction and footer content
Removed extra content from the introduction and footer.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div>
         <h1 id="brand" class="text-5xl md:text-6xl font-black tracking-tight leading-[1.05]"></h1>
         <p class="mt-4 text-lg text-zinc-600 dark:text-zinc-300 max-w-prose">
-          Cyber Security Student | Aspiring Ethical Hacker | Learning Ethical Hacking, Network Security, and System Protection. Always exploring, practicing, and sharing knowledge 🌸. This is a single space for my <b>projects</b>, <b>bio</b>, <b>blog</b> and <b>files</b> — with live search like magic.
+          Cyber Security Student | Aspiring Ethical Hacker | Learning Ethical Hacking, Network Security, and System Protection. Always exploring, practicing, and sharing knowledge 🌸.
         </p>
         <div class="mt-6 flex flex-wrap gap-3">
           <a href="#projects" data-route-link="projects" class="px-5 py-2 rounded-full bg-zinc-900 text-white dark:bg-white dark:text-zinc-900 hover:opacity-90">See Projects</a>
@@ -388,7 +388,7 @@ function showSkill() -->
   <footer class="mt-20 py-10 border-t border-zinc-200 dark:border-zinc-800 text-sm text-center text-zinc-500">
     <div class="mx-auto max-w-6xl px-4">
       <div>© <span id="year"></span> Balkar Singh. All rights reserved.</div>
-      <div class="mt-2">Built with HTML + TailwindCSS + anime.js</div>
+      <div class="mt-2"></div>
     </div>
   </footer>
 
