--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <header class="sticky top-0 z-40 backdrop-blur supports-[backdrop-filter]:bg-white/60 dark:supports-[backdrop-filter]:bg-zinc-950/50 border-b border-zinc-200/60 dark:border-zinc-800">
     <div class="mx-auto max-w-6xl px-4 py-3 flex items-center gap-3">
       <button id="nav-home" class="text-xl font-semibold tracking-tight hover:opacity-80 transition-opacity" aria-label="Go to Home">
-        BS<span class="text-zinc-500">·</span>Portfolio
+        <span class="text-zinc-500">Balkar</span>
       </button>
 
       <nav class="ml-6 hidden md:flex gap-2">
